News UAT/force-app/main/default/objects/Client_Value_Score__c/Client_Value_Score__c.object-meta.xml
<CustomObject>
    <description>Client Value Score (%) are defined based on Client Pricing Tier level (e.g. “AAA”) per Platform (Print and Digital) and the Client Value Score derived from Client Value Points object matrix.</description>
    <label>Client Value Score</label>
    <nameField>
        <displayFormat>CVS-{0000}</displayFormat>
        <label>Client Value Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Value Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>