News UAT/force-app/main/default/objects/Client_Value_Score__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Discount value for the overall score from Client Value Points</description>
    <inlineHelpText>Discount value for the overall score from Client Value Points</inlineHelpText>
    <label>Discount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>