News UAT/force-app/main/default/objects/Client_Value_Score__c/fields/Points_From__c.field-meta.xml
<CustomField>
    <fullName>Points_From__c</fullName>
    <description>Lower value of point range. Leave empty if  range should be &lt;=  to some value (Use &#39;Points To&#39; instead)</description>
    <inlineHelpText>Lower value of point range. Leave empty if  range should be &lt;=  to some value (Use &#39;Points To&#39; instead)</inlineHelpText>
    <label>Points From</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>