News UAT/force-app/main/default/objects/Client_Value_Score__c/fields/Points_To__c.field-meta.xml
<CustomField>
    <fullName>Points_To__c</fullName>
    <description>Higher value of point range. Leave empty if  range should be &gt;= some value (Use &#39;Points From&#39; instead)</description>
    <inlineHelpText>Higher value of point range. Leave empty if  range should be &gt;= some value (Use &#39;Points From&#39; instead)</inlineHelpText>
    <label>Points To</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>