News UAT/force-app/main/default/objects/Client_Value_Score__c/validationRules/Point_Range_Needs_At_Least_One_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Point_Range_Needs_At_Least_One_Value</fullName>
    <active>true</active>
    <description>Rule to enforce entering at least one point range value in Point_From and Point_To fields</description>
    <errorConditionFormula>AND(ISNULL( Points_From__c ), ISNULL( Points_To__c ))</errorConditionFormula>
    <errorMessage>Please enter &quot;Points From&quot; or &quot;Points To&quot; values to define a Points range. To constrain to a specific range enter both values.</errorMessage>
</ValidationRule>