News UAT/force-app/main/default/objects/Client_Value_Score__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Tier__c</columns>
    <columns>Platform__c</columns>
    <columns>Points_From__c</columns>
    <columns>Points_To__c</columns>
    <columns>Discount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>