News UAT/force-app/main/default/objects/Client_Value_Score__c/listViews/Client_Value_Scores.listView-meta.xml
<ListView>
    <fullName>Client_Value_Scores</fullName>
    <columns>NAME</columns>
    <columns>Platform__c</columns>
    <columns>Customer_Tier__c</columns>
    <columns>Points_From__c</columns>
    <columns>Points_To__c</columns>
    <columns>Discount__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Client Value Scores</label>
</ListView>